# Fanflow

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  schemas.py  security.py
app/data/: __init__.py  accessibility.py  stadiums.py  translations.py
app/llm/: client.py
app/routes/: __init__.py  chat.py  crowd.py  navigation.py  static_pages.py
app/services/: __init__.py  chat_service.py  crowd_service.py  firestore_service.py  routing_service.py
static/css/: base.css  dashboard.css  fan.css
static/js/: dashboard.js  fan.js
templates/: dashboard.html  fan.html
tests/: conftest.py  test_accessibility.py  test_chat_service.py  test_config.py  test_crowd_service.py  test_endpoints.py  test_firestore.py  test_fuzzing.py  test_google_sdk.py  test_llm_client.py  test_llm_mocked.py  test_routing_service.py  test_signage_heatmap.py
